rollback: potential fixes to screen jump

--- a/src/components/shell/QuickCaptureModal.module.css
+++ b/src/components/shell/QuickCaptureModal.module.css
@@ -1,9 +1,6 @@
 .backdrop {
   position: fixed;
-  top: var(--vv-offset-top, 0px);
-  left: 0;
-  right: 0;
-  height: var(--vv-height, 100vh);
+  inset: 0;
   background: rgba(15, 12, 10, 0.4);
   display: flex;
   align-items: flex-end;
